# mcp-replay-dota2

./: .gitignore  CHANGELOG.md  CLAUDE.md  docker-compose.yml  dota_match_mcp_server.py  mkdocs.yml  pyproject.toml  pytest.ini  versions.json
.github/workflows/: docker-manual.yml  release.yml  test.yml
1.0.5/: 404.html  index.html  sitemap.xml
1.0.5/REPLAY_PARSING_ARCHITECTURE/: index.html
1.0.5/changelog/: index.html
1.0.5/integrations/: index.html
1.0.6.dev2/: 404.html  index.html  sitemap.xml
1.0.6.dev2/REPLAY_PARSING_ARCHITECTURE/: index.html
1.0.6.dev2/changelog/: index.html
1.0.6.dev2/integrations/: index.html
1.0.7/: 404.html  index.html  sitemap.xml
1.0.7/REPLAY_PARSING_ARCHITECTURE/: index.html
1.0.7/changelog/: index.html
1.0.7/integrations/: index.html
1.0.8/: 404.html  index.html  sitemap.xml
1.0.8/REPLAY_PARSING_ARCHITECTURE/: index.html
1.0.8/changelog/: index.html
1.0.8/integrations/: index.html
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/REPLAY_PARSING_ARCHITECTURE/: index.html
1.2.0/changelog/: index.html
1.2.0/integrations/: index.html
1.2.0/search/: search_index.json
data/personas/: pos1_carry.md
data/pro_scene/: pro_players.json  team_8291895.json
docs/: REPLAY_PARSING_ARCHITECTURE.md  changelog.md  index.md
docs/api/: tools.md
master/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_combat_log_parser.py  test_fight_analyzer.py  test_heroes_resources.py  test_match_8594217096.py  test_match_info_parser.py  test_model_validation.py  test_pro_scene.py  test_use_cases.py
(+169 files in other folders)
