[project]
name = "mcp_dota2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.3",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "python-opendota @ file:///home/juanma/projects/equilibrium_coach/python-opendota-sdk",
    "requests>=2.32.5",
    "python-manta @ file:///home/juanma/projects/equilibrium_coach/python_manta",
    "pytest>=8.4.2",
]

